TestSuite/Syntax/Errors/DepLoop10.tjp
project prj "Loop Detector Test" "$Id" 2000-01-01 - 2000-01-08

# a.b1.c1 (Start) -> a.b1.c1 (End) -> a.b1.c2 (Start) -> a.b1.c2 (End)
# -> a.b2.c2 (Start) -> a.b2.c2 (End) -> a.b2 (End) -> a.b1.c1 (Start)

task a "Task A" {
	start 2000-01-01
	
	task b1 "Task B1" {
		task c1 "Task C1" {
			length 1d
			depends !!b2
		}
		task c2 "Task C2" {
			length 1d
			depends !c1
		}
	}

	task b2 "Task B2" {
		task c1 "Task C1" {
			length 1d
		}
		task c2 "Task C2" {
			depends !!b1.c2
			length 1d
		}
	}	
}

